hphp/test/quick/hh_typehint1.php.expectf

Fatal error: Argument 1 to foo() must be of type ?Bar, Foo given in %s/quick/hh_typehint1.php on line 5
